I fucking hate mosquitoes!

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <P>Justice is an art which gives good to friends of morality and evil to enemies of morality.</P>
     </div>
 
-    <h2>Books read</h2>
+    <h2>Favorite Books</h2>
     <div class="books">
         <ol class="bookslist" type="1">
             <li><a href="https://www.goodreads.com/book/show/61439040-1984" target="_blank" style="color: 6b7280; text-decoration: none;">1984</a></li>
