I hate piercings, especially belly button piercings.

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     
     <div class="about">
         <h3>About</h3>
-        <h5><p>Pranit Zambre, born on April 11, 2003, on Earth. Currently, I'm immersed in the world of InfoTech, pursuing my bachelor's degree as a passionate student. I thrive on critical thinking and problem-solving while exploring the fascinating realm of technology. Beyond academics, I have an extremely strong interest in global politics and economics, and I love cricket and football, where strategy and teamwork come together.</p></h5>
+        <h5><p>Currently, I'm immersed in the world of InfoTech, pursuing my bachelor's degree as a passionate student. I thrive on critical thinking and problem-solving while exploring the fascinating realm of technology. Beyond academics, I have an extremely strong interest in global politics and economics, and I love cricket and football, where strategy and teamwork come together.</p></h5>
     </div>
     
     <div class="education">
