Average length of human penis is 5.21 inches.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         }
         p, ol {
             color: #6b7280;
+            text-align: justify;
+            text-justify: inter-word;
+            hyphens: auto;
             text-align: left;
         }
 
