--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content=pranit,zambre,pranitzambre>
-    <meta name="description" content="Designed by Pranit Zambre on Earth.">
     <meta id="viewport-tag"  name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1.0">
+    <title>Pranit Zambre</title>
+    <meta name="description" content="I believe justice is an art which gives good to friends of morality and evil to enemies of morality.">
+    <meta name="keywords" content=pranit,zambre,pranitzambre,lovemachine,thelovemachine,techno,technomaximus>
+    <meta name="author" content="Pranit Zambre">
+    <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta property="og:site_name" content="Pranit Zambre">
-    <meta property="og:title" content="Pranit Zambre">
-    <meta property="og:url" content="https://www.pranitzambre.com">
-    <meta property="og:type" content="website">
-    <meta itemprop="name" content="Pranit Zambre">
-    <meta itemprop="url" content="https://www.pranitzambre.com">
+    <meta property="og:title" content="Your Page Title">
+    <meta property="og:description" content="I believe justice is an art which gives good to friends of morality and evil to enemies of morality.">
+    <meta property="og:image" content="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/3793744405984635775576490205551295724538989134695659052728660962601632530433">
+    <meta property="og:url" content="https://pranitzambre.com">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Pranit Zambre">
-    <meta name="twitter:url" content="https://www.pranitzambre.com">
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@pranitzambre">
+    <meta name="twitter:description" content="I believe justice is an art which gives good to friends of morality and evil to enemies of morality.">
+    <meta name="twitter:image" content="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/3793744405984635775576490205551295724538989134695659052728660962601632530433">
     <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="x-icon" href="svgs/love.svg">
-    <title>Pranit Zambre</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500&display=swap');
 
