--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <meta name="author" content="Pranit Zambre">
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta property="og:title" content="Your Page Title">
+    <meta property="og:title" content="The Lovemachine">
     <meta property="og:description" content="I believe justice is an art which gives good to friends of morality and evil to enemies of morality.">
-    <meta property="og:image" content="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/3793744405984635775576490205551295724538989134695659052728660962601632530433">
+    <meta property="og:image" content="https://pbs.twimg.com/profile_images/1633167366031826945/jRyljHEe_400x400.jpg">
     <meta property="og:url" content="https://pranitzambre.com">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Pranit Zambre">
+    <meta name="twitter:title" content="The Lovemachine">
     <meta name="twitter:site" content="@pranitzambre">
     <meta name="twitter:description" content="I believe justice is an art which gives good to friends of morality and evil to enemies of morality.">
-    <meta name="twitter:image" content="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/3793744405984635775576490205551295724538989134695659052728660962601632530433">
+    <meta name="twitter:image" content="https://pbs.twimg.com/profile_images/1633167366031826945/jRyljHEe_400x400.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="x-icon" href="svgs/love.svg">
     <style>
