Product names are important! Don’t let anyone tell you otherwise!

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta id="viewport-tag"  name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1.0">
     <title>Pranit Zambre</title>
+    <meta name="title" content="Pranit Zambre">
     <meta name="description" content="I believe justice is an art which gives good to friends of morality and evil to enemies of morality.">
     <meta name="keywords" content=pranit,zambre,pranitzambre,lovemachine,thelovemachine,techno,technomaximus>
     <meta name="author" content="Pranit Zambre">
