--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <body>
     <div class="pranitzambre">
         <h3>Pranit Zambre</h3>
-        <p><h5 style="color: #6b7280;">Also known as The Lovemachine, was born on April 11, 2003.</h5></p>
+        <p><h5 style="color: #6b7280;">Also known as The Lovemachine.</h5></p>
 
         <div class="email">
             <h5><a href="mailto:pranit@email.com"><img src="svgs/email.svg" alt="email" height="40" width="40"></a><a href="mailto:pranit@email.com" style="color: black;">pranit@email.com</a></h5>
