Flaws of communism.

--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
             <div class="books">
         <ol class="bookslist" type="1">
             <li><a href="https://www.goodreads.com/book/show/61439040-1984" target="_blank" style="color: 6b7280; text-decoration: none;">1984</a></li>
+            <li><a href="https://www.goodreads.com/book/show/30659.Meditations" target="_blank" style="color: 6b7280; text-decoration: none;">Meditations by Marcus Aurelius</a></li>
             <li><a href="https://www.goodreads.com/book/show/170448.Animal_Farm" target="_blank" style="color: 6b7280; text-decoration: none;">Animal Farm</a></li>
             <li><a href="https://www.goodreads.com/book/show/49095676-the-history-of-philosophy" target="_blank" style="color: 6b7280; text-decoration: none;">The History of Philosophy</a></li>
             <li><a href="https://www.goodreads.com/book/show/96884.The_Happiness_Hypothesis" target="_blank" style="color: 6b7280; text-decoration: none;">The Happiness Hypothesis</a></li>
             <li><a href="https://www.goodreads.com/book/show/11.The_Hitchhiker_s_Guide_to_the_Galaxy" target="_blank" style="color: 6b7280; text-decoration: none;">The Hitchhiker’s Guide to the Galaxy</a></li>
             <li><a href="https://www.goodreads.com/book/show/30289.The_Republic" target="_blank" style="color: 6b7280; text-decoration: none;">The Republic</a></li>
             <li><a href="https://www.goodreads.com/book/show/33848629-a-gentle-wizard" target="_blank" style="color: 6b7280; text-decoration: none;">A Gentle Wizard</a></li>
-            <li><a href="https://www.goodreads.com/book/show/30474.The_Communist_Manifesto" target="_blank" style="color: 6b7280; text-decoration: none;">The Communist Manifesto</a></li>
             <li><a href="https://www.goodreads.com/book/show/31125556-destined-for-war" target="_blank" style="color: 6b7280; text-decoration: none;">Destined for War</a></li>
             <li><a href="https://www.goodreads.com/book/show/44770129-ultralearning" target="_blank" style="color: 6b7280; text-decoration: none;">Ultralearning</a></li>
         </ol>
