The economical idea.

--- a/index.html
+++ b/index.html
@@ -218,6 +218,15 @@
     </div>
     </h5>
 
+    <h3>Proposed Ideas</h3>
+    <h5>
+            <div class="books">
+        <ol class="bookslist" type="1">
+            <li><a href="https://www.onecapitalism.com/" target="_blank" style="color: 6b7280; text-decoration: none;">OneCapism</a></li>
+        </ol>
+    </div>
+    </h5>
+
     <div class="floatingbutton" id="actionButton">
         <button onclick="print()">Print</button>
     </div>
