--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta property="og:title" content="The Lovemachine">
     <meta property="og:description" content="I believe justice is an art which gives good to friends of morality and evil to enemies of morality.">
-    <meta property="og:image" content="https://pbs.twimg.com/profile_images/1633167366031826945/jRyljHEe_400x400.jpg">
+    <meta property="og:image" content="https://imgur.com/a/gi55lxB">
     <meta property="og:url" content="https://pranitzambre.com">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="The Lovemachine">
     <meta name="twitter:site" content="@pranitzambre">
     <meta name="twitter:description" content="I believe justice is an art which gives good to friends of morality and evil to enemies of morality.">
-    <meta name="twitter:image" content="https://pbs.twimg.com/profile_images/1633167366031826945/jRyljHEe_400x400.jpg">
+    <meta name="twitter:image" content="https://imgur.com/a/gi55lxB">
     <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="x-icon" href="svgs/love.svg">
     <style>
